--- a/spring-mvc/src/main/webapp/WEB-INF/views/html/index.html
+++ b/spring-mvc/src/main/webapp/WEB-INF/views/html/index.html
@@ -16,7 +16,7 @@
 <body>
 <div class="page-container">
     <h1>LOGIN</h1>
-    <form id="form" action="/home/ssm" method="post">
+    <form id="form" action="/home/ssm" method="get">
         <input name="username" class="username" placeholder="username">
         <input type="password" name="password" class="password" placeholder="password">
         <input type="hidden" name="number" value="1.1111111">
